DOC-1818: typo correction in `mergtags.adoc` (#2532)
* DOC-1818: mergtags.adoc

Typo correction: s/tags/Tags/.

* Update modules/ROOT/pages/mergetags.adoc

Further typo corrections.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/pages/mergetags.adoc
+++ b/modules/ROOT/pages/mergetags.adoc
@@ -74,9 +74,9 @@ Content containing the specified prefix and suffix, and matching a specified mer
 +
 The `+mergetags_list+` option allows for the specification of a nested menu item within the merge tags toolbar menu button. This option allows any number of nested menus and items for merge tag categorisation.
 
-== Styling Merge tags
+== Styling Merge Tags
 
-It's possible to change the visual appearance of the Merge tags within the editor using a custom CSS file provided through the xref:add-css-options.adoc#content_css[content_css] option. Here is an example on how to style the various elements of the merge tag.
+It's possible to change the visual appearance of the Merge Tags within the editor using a custom CSS file provided through the xref:add-css-options.adoc#content_css[content_css] option. Here is an example of how to style the various elements of the merge tag.
 
 [source,css]
 ----
