DOC-1821: mergetags.adoc, 6.2-release-notes.adoc, mergetags-menu-item… (#2536)
* DOC-1821: mergetags.adoc, 6.2-release-notes.adoc, mergetags-menu-items.adoc, & mergetags_list.adoc

1. mergetags.adoc: replaced instances of ‘Merge Tags’ (however capitalised) with ‘{pluginname}’.

Attributes are defined and declared; I should use them.

Some instances were copy-edited to ‘merge tags’. The plugin is a Proper Noun and gets both words capitalised. But the particular strings that are placeholders for other data are specific merge tags, which are plain old noun phrases.

2. Corrected capitalisation instances through other files, most particularly, `6.2-release-notes.adoc`.

The same ‘if it is a placeholder string, it is a plain old noun phrase otherwise it is set as a Proper Noun’ treatment applied through these files as well.

* Update modules/ROOT/pages/6.2-release-notes.adoc

s/Merge tag/Merge Tags/

Co-authored-by: Lee Newson <lee.newson@tiny.cloud>

* Update modules/ROOT/pages/6.2-release-notes.adoc

s/Merge tag/merge tag/

Co-authored-by: Lee Newson <lee.newson@tiny.cloud>

* Update modules/ROOT/pages/mergetags.adoc

s/Merge tag/merge tag/

Co-authored-by: Lee Newson <lee.newson@tiny.cloud>

Co-authored-by: Lee Newson <lee.newson@tiny.cloud>

--- a/modules/ROOT/pages/6.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.2-release-notes.adoc
@@ -549,19 +549,19 @@ There are several known issues in {productname} 6.2.
 
 === Merge Tags cannot be manually added to a {productname} document in some circumstances
 
-There are several circumstances where typing the Merge tags prefix (by default, `+{{+`) does not activate the `autocompleter`. Consequently, choosing a Merge tag from the expected pop-up menu is not possible because the pop-up menu does not present.
+There are several circumstances where typing the Merge Tags prefix (by default, `+{{+`) does not activate the `autocompleter`. Consequently, choosing a Merge tag from the expected pop-up menu is not possible because the pop-up menu does not present.
 
-Moreover, in the circumstances where the `autocompleter` does not activate, even typing the entire Merge tag does not result in the string being turned in to a Merge tag.
+Moreover, in the circumstances where the `autocompleter` does not activate, even typing the entire merge tag does not result in the string being turned in to a merge tag.
 
 There is a workaround, however.
 
-If typing the Merge tags prefix does not work as expected, clicking the Merge tags toolbar button and selecting the desired Merge tag from the resultant menu inserts a functioning Merge tag.
+If typing the Merge Tags prefix does not work as expected, clicking the Merge Tags toolbar button and selecting the desired merge tag from the resultant menu inserts a functioning merge tag.
 
-=== Merge tags does not validate inserted strings that match merge tag syntax
+=== Merge Tags does not validate inserted strings that match merge tag syntax
 
-If a string is pasted or otherwise inserted into a {productname} document and that string presents as a complete merge tag, the Merge tag plugin will turn the string into an apparently working merge tag, regardless of the string’s content.
+If a string is pasted or otherwise inserted into a {productname} document and that string presents as a complete merge tag, the Merge Tags plugin will turn the string into an apparently working merge tag, regardless of the string’s content.
 
-For example, if a {productname} instance is running the Merge tags plugin and the plugin is using the default prefix and suffix characters — `+{{+` and `+}}+` — pasting
+For example, if a {productname} instance is running the Merge Tags plugin and the plugin is using the default prefix and suffix characters — `+{{+` and `+}}+` — pasting
 
 `{{not.a.merge.tag.value.for.this.document}}`
 
@@ -569,7 +569,7 @@ into the document results in the pasted string being turned in to an apparently 
 
 There is no current workaround.
 
-=== A Merge tags UI element has not been translated
+=== A Merge Tags UI element has not been translated
 
 {productname} 6.2 adds a new UI option to menu toolbar buttons. These buttons can now present a search field at the top of the menu.
 
