--- a/modules/ROOT/partials/menu-item-ids/mergetags-menu-items.adoc
+++ b/modules/ROOT/partials/menu-item-ids/mergetags-menu-items.adoc
@@ -1,5 +1,5 @@
 [cols="1,1,2",options="header"]
 |===
 |Menu item identifier |xref:menus-configuration-options.adoc#example-the-tinymce-default-menu-items[Default Menu Location] |Description
-|`+mergetags+` |Insert |Inserts a merge tag from a nested menu. The nested menu contains the merge tags list, as specified in xref:mergetags.adoc#mergetags_list[`+mergetags_list+`]
+|`+mergetags+` |Insert |Inserts a merge tag from a nested menu. The nested menu contains the Merge Tags list, as specified in xref:mergetags.adoc#mergetags_list[`+mergetags_list+`]
 |===
