DOC-1831: added outbound links to browser-native APIs documentation that replaced two deprecated and removed TinyMCE APIs. (#2537)

--- a/modules/ROOT/partials/release-notes/6.0-release-notes-summary.adoc
+++ b/modules/ROOT/partials/release-notes/6.0-release-notes-summary.adoc
@@ -230,7 +230,7 @@ The following elements were previously deprecated and have, with this release, b
 
 | `images_dataimg_filter`               | Option        |
 
-| `JSON`                                | API           |
+| `JSON`                                | API           | Use the native `JSON` https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON[API] instead.
 
 | `JSONP`                               | API           |
 
@@ -276,7 +276,7 @@ The following elements were previously deprecated and have, with this release, b
 
 | `validate`                            | Schema option |
 
-| `XHR`                                 | API           | Any remaining `XHR` users have been replaced with `fetch`.
+| `XHR`                                 | API           | Any remaining `XHR` uses have been replaced with https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API[`fetch`].
 |===
 
 // end::previously-deprecated-items-now-removed[]
