DOC-554: admon-inline-editing-mode-does-not-support-comments.adoc, customsidebar.adoc, introduction-to-tiny-comments.adoc, & use-tinymce-inline.adoc
1. Added `admon-inine-editing-mode-does-not-support-comments.adoc` to `/partial/misc/`.

This file contains an IMPORTANT admonition noting, as the file-name suggests, that Comments are not supported when TinyMCE is run in inline editing mode.

2. Added includes to the above `partial` to `use-tinymce-inline.adoc` and `introduction-to-tiny-comments.adoc`.

3. Added a NOTE admonition to `customsidebar.adoc` noting that Sidebars do not work in inline editing mode.

--- a/modules/ROOT/pages/customsidebar.adoc
+++ b/modules/ROOT/pages/customsidebar.adoc
@@ -6,6 +6,8 @@
 
 {productname} allows developers to create sidebars and add custom UI widgets inside a constrained and easily accessible area of the editor. The sidebar is designed to allow administrators and plugin developers to provide additional tools that can be accessed by {productname} users.
 
+NOTE: Sidebars do not work when {productname} is run in xref:use-tinymce-inline.adoc[inline editing mode].
+
 == Editor sidebar API
 
 The sidebar API allows developers to add sidebars on editor instances in a similar way as adding buttons or menu items. Developers can either add sidebars directly in the `+tinymce.init+` using the setup callback or inside your plugin.
