--- a/modules/ROOT/partials/misc/admon-inline-editing-mode-does-not-support-comments.adoc
+++ b/modules/ROOT/partials/misc/admon-inline-editing-mode-does-not-support-comments.adoc
@@ -1,1 +1,1 @@
-IMPORTANT: xref:introduction-to-tiny-comments.adoc[Comments] are not supported when running {productname} in the inline editing mode. Comments require the sidebar, and the sidebar does not work with the inline editing mode.
+IMPORTANT: xref:introduction-to-tiny-comments.adoc[Comments] are not supported when running {productname} in the inline editing mode. Comments require the xref:customsidebar.adoc[Sidebar], and the Sidebar does not work with the inline editing mode.
