--- a/modules/ROOT/partials/release-notes/6.2-release-notes-autocompleter-trigger-configuration-property.adoc
+++ b/modules/ROOT/partials/release-notes/6.2-release-notes-autocompleter-trigger-configuration-property.adoc
@@ -1,4 +1,4 @@
-Previously, autocompleter used the `ch` configuration property to set a single character trigger.
+Previously, the autocompleter used the `ch` configuration property to set a single character trigger.
 
 This property has been deprecated and will be removed in the next major release.
 
