DOC-554: admon-inline-editing-mode-does-not-support-comments.adoc
Edited IMPORTANT admonition to make its presentation more consistent with near-equivalent admonitions in `admon-inline-only-adoc` and `customsidebar.adoc`.

--- a/modules/ROOT/partials/misc/admon-inline-editing-mode-does-not-support-comments.adoc
+++ b/modules/ROOT/partials/misc/admon-inline-editing-mode-does-not-support-comments.adoc
@@ -1,1 +1,1 @@
-IMPORTANT: xref:introduction-to-tiny-comments.adoc[Comments] are not supported when running {productname} in the inline editing mode. Comments require the xref:customsidebar.adoc[Sidebar], and the Sidebar does not work with the inline editing mode.
+IMPORTANT: xref:introduction-to-tiny-comments.adoc[Comments] are only supported when {productname} is run in _iframe_ mode. Comments require the xref:customsidebar.adoc[Sidebar], and Sidebars are not supported in _inline_ or _distraction free_ mode. For more information on the differences between the editing modes, see xref:use-tinymce-inline.adoc[Inline editing mode].
