Updated iframe_mode >> classic_mode Updated iframe string to classic >line12

--- a/modules/ROOT/partials/configuration/toolbar_sticky.adoc
+++ b/modules/ROOT/partials/configuration/toolbar_sticky.adoc
@@ -9,7 +9,7 @@ To see a demo of sticky toolbar, see the https://codepen.io/tinymce/full/qBWLLMP
 
 *Type:* `+Boolean+`
 
-*Default value:* `+false+` in `iframe` mode, `+true+` in `inline` mode
+*Default value:* `+false+` in `classic` mode, `+true+` in `inline` mode
 
 *Possible values:* `+true+`, `+false+`
 
