--- a/modules/ROOT/partials/misc/admon-iframe-only.adoc
+++ b/modules/ROOT/partials/misc/admon-iframe-only.adoc
@@ -1,1 +1,1 @@
-NOTE: This option is only supported when {productname} is run in _iframe_ mode. It is not supported in _inline_ mode. For more information on the differences between the editing modes, see xref:use-tinymce-classic.adoc[Classic editing mode].
+NOTE: This option is only supported when {productname} is run in _classic_ mode. It is not supported in _inline_ mode. For more information on the differences between the editing modes, see xref:use-tinymce-classic.adoc[Classic editing mode].
