--- a/modules/ROOT/partials/misc/admon-different-default-for-mobile.adoc
+++ b/modules/ROOT/partials/misc/admon-different-default-for-mobile.adoc
@@ -1,1 +1,1 @@
-NOTE: The default value for this option is different for mobile devices. For information on the default mobile option, see: xref:tinymce-for-mobile.adoc#mobile-defaults-for-selected-options[{productname} Mobile - Configuration options with mobile defaults].
+NOTE: The default value for this option is different for mobile devices. For information on the default mobile option, see: xref:tinymce-for-mobile.adoc#mobile-defaults-for-selected-options[{productname} Mobile — Configuration options with mobile defaults].
