DOC_554: sidebar_show.adoc & customsidebar.adoc
1. `sidebar_show.adoc`: added include to partial, `admon-iframe-only.adoc`.

2. `customsidebar.adoc`: restored sidebar-specific NOTE admonition and removed include.

--- a/modules/ROOT/partials/configuration/sidebar_show.adoc
+++ b/modules/ROOT/partials/configuration/sidebar_show.adoc
@@ -5,6 +5,8 @@ include::partial$misc/admon-requires-6.1v.adoc[]
 
 This option allows the specified sidebar to be shown on editor initialization.
 
+include::partial$misc/admon-iframe-only.adoc[]
+
 *Type:* `+String+`
 
 === Example: Using `+sidebar_show+`
