--- a/modules/ROOT/partials/misc/admon-inline-only.adoc
+++ b/modules/ROOT/partials/misc/admon-inline-only.adoc
@@ -1,1 +1,1 @@
-NOTE: This option is only supported when using an `inline` editor. For more information on the differences between the editing modes, see xref:use-tinymce-inline.adoc[Inline editing mode].
+NOTE: This feature is only supported when {productname} is run in _inline_ mode. It is not supported in _classic_ mode. For more information on the differences between the editing modes, see xref:use-tinymce-inline.adoc[Inline editing mode].
