Fix +xref:charmap.adoc link

--- a/modules/ROOT/partials/index-pages/opensource-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/opensource-plugins.adoc
@@ -35,7 +35,7 @@ Automatically save content in your local browser.
 
 a|
 [.lead]
-xref:autoresize.adoc[Character Map]
+xref:charmap.adoc[Character Map]
 
 Insert special characters into {productname}.
 
