Updating xref description

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -70,7 +70,7 @@
 **** xref:react-zip-bundle.adoc[Using a .zip package with bundling]
 **** xref:react-ref.adoc[Technical reference]
 *** Angular framework
-**** xref:angular-cloud.adoc[Using Tiny Cloud]
+**** xref:angular-cloud.adoc[Using the Tiny Cloud]
 **** xref:angular-pm.adoc[Using a package manager]
 **** xref:angular-zip.adoc[Using a .zip package]
 **** xref:angular-ref.adoc[Technical reference]
@@ -80,7 +80,7 @@
 **** xref:vue-zip.adoc[Using a .zip package]
 **** xref:vue-ref.adoc[Technical reference]
 *** Blazor framework
-**** xref:blazor-cloud.adoc[Using Tiny Cloud]
+**** xref:blazor-cloud.adoc[Using the Tiny Cloud]
 **** xref:blazor-pm.adoc[Using a package manager]
 **** xref:blazor-zip.adoc[Using a .zip package]
 **** xref:blazor-ref.adoc[Technical reference]
@@ -106,7 +106,7 @@
 **** xref:django-zip.adoc[Using a .zip package]
 *** xref:expressjs-pm.adoc[Node.js + Express]
 *** Laravel framework
-**** xref:laravel-tiny-cloud.adoc[Using Tiny Cloud]
+**** xref:laravel-tiny-cloud.adoc[Using the Tiny Cloud]
 **** xref:laravel-composer-install.adoc[Using the Composer package]
 **** xref:laravel-zip-install.adoc[Using a .zip package]
 *** Ruby on Rails framework
