DOC-1777: release-notes.adoc
1. Added 6.3 release notes cell to table of 6.x release notes

2. Uncommented the dummy table cell markup as per the ‘need a dummy table cell when there are an odd number of release notes files’ requirement.

--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -11,6 +11,13 @@ This section lists the releases for {productname} 6 and the changes made in each
 
 a|
 [.lead]
+xref:6.3-release-notes.adoc#overview[{productname} 6.3]
+
+Release notes for {productname} 6.3
+
+
+a|
+[.lead]
 xref:6.2-release-notes.adoc#overview[{productname} 6.2]
 
 Release notes for {productname} 6.2
@@ -53,7 +60,7 @@ Release notes for {productname} 6.0
 //    odd.
 // 2. Prepend the inline comment markup to this element
 //    when the number of cells in the table is even.
-//a|
+a|
 
 |===
 
