--- a/modules/ROOT/partials/configuration/a11ychecker_filter_issue.adoc
+++ b/modules/ROOT/partials/configuration/a11ychecker_filter_issue.adoc
@@ -47,7 +47,7 @@ tinymce.init({
 
 === Example: Using `+a11ychecker_filter_issue+` to filter images with empty alternative text from the Accessibility Checker I1 rule
 
-The callback function in the following example will only return `false` for any issues with `'I1'` as the `+'id'+` image elements with an empty `+'alt+'` attribute, otherwise the issue won't be filtered out. This implementation can be useful as allowing images to have empty alternative text can be an alternative to applying the `+role="presentation"` attribute to mark an image as `+decorative+`.
+The callback function in the following example will only return `false` for any issues with `'I1'` as the `+'id'+` image elements with an empty `+'alt+'` attribute, otherwise the issue won't be filtered out. This implementation can be useful as allowing images to have empty alternative text can be an alternative to applying the `+role="presentation"+` attribute to mark an image as `+decorative+`.
 
 [source,js]
 ----
@@ -57,7 +57,7 @@ tinymce.init({
   toolbar: 'a11ycheck',
   a11ychecker_filter_issue: (issue) => {
     const element = issue.element;
-    const isImageAndI1Issue = issue.id !== 'I1' && element.nodeName.toLowerCase() === 'img';
+    const isImageAndI1Issue = issue.id === 'I1' && element.nodeName.toLowerCase() === 'img';
     const hasEmptyAltAttribute = element.hasAttribute('alt') && element.alt === '';
     return !(isImageAndI1Issue && hasEmptyAltAttribute);
   }
