INT-3038: Vue 2 EoL note

--- a/modules/ROOT/partials/integrations/vue-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/vue-quick-start.adoc
@@ -43,12 +43,13 @@ This procedure requires https://nodejs.org/[Node.js (and npm)].
 ----
 npm create vue@3
 ----
-* If you need to support IE11, you can create a Vue.js 2.x project instead:
+* If you need to create a Vue.js 2.x projects instead:
 +
 [source,sh]
 ----
 npm create vue@2
 ----
+NOTE: Vue 2 will reach End of Life by the end of 2023 according to https://vuejs.org/about/faq.html#what-s-the-difference-between-vue-2-and-vue-3[Vue FAQ].
 * Follow the prompts and type `+tinymce-vue-demo+` as the project name.
 . Change into the newly created directory.
 +
