--- a/modules/ROOT/pages/comments-commands-events-apis.adoc
+++ b/modules/ROOT/pages/comments-commands-events-apis.adoc
@@ -39,7 +39,7 @@ tinymce.init({
 
 == APIs
 
-The {pluginname} plugin provides the following API.
+The {pluginname} plugin provides the xref:comments-commands-events-apis#getEventLog[`+getEventLog()+`] API, as well as an annotator named xref:comments-commands-events-apis#tinycomments-annotator[`+'tinycomments'+`] created using the xref:annotations.adoc[`+editor.annotator+` API].
 
 [[getEventLog]]
 === getEventLog()
@@ -66,4 +66,74 @@ console.log(comments.getEventLog());
 console.log(comments.getEventLog(
   { after: '2022-02-22T12:34:56Z' }  // ISO-8601 standard: YYYY-MM-DDThh:mm:ssZ
 ));
+----
+
+[[tinycomments-annotator]]
+=== The `+'tinycomments'+` annotator
+
+The {pluginname} plugin provides an annotator named `+'tinycomments'+`, constructed using the xref:annotations.adoc[`+editor.annotator+` API].
+
+The `+'tinycomments'+` annotator is used to annotate content with conversations attached, and is available for use in each of the `+editor.annotator+` API methods.
+
+The `+'tinycomments'+` annotator, like all editor APIs, can only be accessed after the editor is initialized.
+
+==== Example: Using the `+'tinycomments'+` annotator to notify when conversations are selected
+
+This example makes use of the `+annotationChanged+` method in the `+editor.annotator+` API to create a xref:creating-custom-notifications.adoc[custom notification].
+
+This notification displays for five seconds every time any content with a `+'tinycomments'+` annotation is selected.
+
+[source,js]
+----
+tinymce.init({
+  selector: 'textarea',
+  plugins: 'tinycomments',
+  toolbar: 'addcomment showcomments',
+  setup: (editor) => {
+    editor.on('init', () => {
+      editor.annotator.annotationChanged('tinycomments', (selected, annotatorName, context) => {
+        if (selected) {
+          editor.notificationManager.open({
+            text: `The content you have selected contains a conversation. ${annotatorName}: ${context.uid}.`,
+            type: 'info',
+            timeout: 5000
+          });
+        }
+      });
+    });
+  }
+});
+----
+
+==== Example: Using the `+'tinycomments'+` annotator to highlight conversations without showing comments
+
+This example makes use of the `+getAll+` method in the `+editor.annotator+` API to highlight every element annotated by `+'tinycomments'+`.
+
+When the `+'highlightcomments'+` button on the toolbar is toggled on, every annotated element is highlighted `+aquamarine+`, without requiring the user to xref:comments-using-comments#show-or-view-a-comment[show comments].
+
+[source,js]
+----
+tinymce.init({
+  selector: 'textarea',
+  plugins: 'tinycomments',
+  toolbar: 'addcomment showcomments highlightcomments',
+  setup: (editor) => {
+    editor.ui.registry.addToggleButton('highlightcomments', {
+      icon: 'highlight-bg-color',
+      onAction: (api) => {
+        api.setActive(!api.isActive());
+        const conversations = editor.annotator.getAll('tinycomments');
+        for (const [conversation, elements] of Object.entries(conversations)) {
+          elements.forEach((element, _) => {
+            if (api.isActive()) {
+              element.style.setProperty('background-color', 'aquamarine');
+            } else {
+              element.style.removeProperty('background-color');
+            }
+          });
+        }
+      }
+    });
+  }
+});
 ----
