DOC-1827: inline-css.adoc; inlinecss-apis.adoc; inlinecss-cmds.adoc; inlinecss-events.adoc; and nav.adoc
1. Added `inline-css.adoc` skeleton to `/modules/ROOT/pages/`.
2. Added `inlinecss-apis.adoc` skeleton to `/modules/ROOT/partials/plugin-apis/`.
3. Added `inlinecss-cmds.adoc` skeleton to `/modules/ROOT/partials/commands/`.
4. Added `inlinecss-events.adoc` skeleton to `/modules/ROOT/partials/events/`.
5. Added xref entry pointint to `inline-css.adoc` to `nav.adoc`.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -296,6 +296,7 @@
 *** xref:export.adoc[Export]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
+*** xref:inline-css.adoc[Inline CSS]
 *** xref:linkchecker.adoc[Link Checker]
 *** xref:mentions.adoc[Mentions]
 *** xref:mergetags.adoc[Merge Tags]
