DOC-1754: advanced-typography.adoc; available-menu-items.adoc, available-toolbar-buttons.adoc, nav.adoc
1. added `advanced-typography.adoc` skeleton to `/modules/ROOT/pages/`.
2. added `advanced-typography-adoc` draft to `/modules/ROOT/partials/configuration/`.
3. added Advanced Typography entry to `/modules/ROOT/pages/available-menu-items.adoc`.
4. added Advanced Typography entry to `/modules/ROOT/pages/available-toolbar-buttons.adoc`.
5. Added xref entry pointing to `advanced-typography.adoc` to `nav.adoc`.

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -37,6 +37,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :plugincode: advtable
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Advanced Typography
+:plugincode: typography
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Anchor
 :plugincode: anchor
