DOC-1857: Typo Tuesday 01; inline-formatting-of-list-bullets.adoc & toolbar_mode.adoc
Typo 1: inline-formatting-of-list-bullets.adoc: s/plugi]/plugin/.
Typo 2: toolbar_mode.adoc: s/`+'floating'+` or `+sliding+`/`+'floating'+` or `+'sliding'+`/.

--- a/modules/ROOT/partials/configuration/toolbar_mode.adoc
+++ b/modules/ROOT/partials/configuration/toolbar_mode.adoc
@@ -3,7 +3,7 @@
 
 The `+toolbar_mode+` option is used to extend the toolbar to accommodate the overflowing toolbar buttons. This option is useful for small screens or small editor frames.
 
-When the toolbar_mode is set to `+'floating'+` or `+sliding+`, the editor will move toolbar buttons to the toolbar drawer based on:
+When the toolbar_mode is set to `+'floating'+` or `+'sliding'+`, the editor will move toolbar buttons to the toolbar drawer based on:
 
 * The defined toolbar groups.
 * The width of the editor.
