--- a/modules/ROOT/partials/misc/inline-formatting-of-list-bullets.adoc
+++ b/modules/ROOT/partials/misc/inline-formatting-of-list-bullets.adoc
@@ -22,7 +22,7 @@ IMPORTANT: If, after applying inline-formatting, a partial selection of the now 
 
 === PowerPaste Premium plugin support
 
-Users of the xref:introduction-to-powerpaste.adoc[PowerPaste] Premium plugi] should note, this plugin does not, currently, support inline-formatted bullets or list numbers.
+Users of the xref:introduction-to-powerpaste.adoc[PowerPaste] Premium plugin should note, this plugin does not, currently, support inline-formatted bullets or list numbers.
 
 Inline-formatting, as applied to the bullets or list numbers, is lost when such material is copied and pasted using the PowerPaste plugin.
 
